[project]
name = "euscitojoypad_db"
version = "1"
description = "Backoffice per data entry del progetto euscitojoypad.it"
authors = [{ name = "Paolo Donadeo", email = "paolo@donadeo.net" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (==5.2.6)",
    "django-extensions (==4.1)",
    "uvicorn[standard] (>=0.34.2,<0.35.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "django-json-widget (>=2.0.1,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
humanize = "^4.12.3"
black = "^25.1.0"
djlint = "^1.36.4"
click = "^8.1.8"
pyppeteer = "^2.0.0"
urllib3 = ">=1.25.8,<2.0.0"


[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312', 'py313']
