[project]
name = "euscitojoypad_db"
version = "1"
description = "Backoffice per data entry del progetto euscitojoypad.it"
authors = [{ name = "Paolo Donadeo", email = "paolo@donadeo.net" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=6.0.2,<7.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "gunicorn (>=25.1.0,<26.0.0)",
    "whitenoise (>=6.11.0,<7.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "django-json-widget (>=2.1.1,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
humanize = "^4.12.3"
black = "^25.1.0"
djlint = "^1.36.4"
click = "^8.1.8"
pyppeteer = "^2.0.0"
urllib3 = ">=1.25.8,<2.0.0"


[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312', 'py313']
