(executable
 (name e_uscito_joypad)
 (public_name e_uscito_joypad)
 (modules e_uscito_joypad views joypad_monitor react middlewares)
 (preprocess
  (pps lwt_ppx tyxml-ppx ppx_deriving_yojson))
 (libraries
  dream
  db
  rest
  settings
  batteries
  malloc
  timedesc
  cohttp-lwt-unix
  lambdasoup
  re2
  tyxml
  ppx_deriving_yojson.runtime
  caqti-driver-postgresql
  caqti-lwt))

(library
 (name settings)
 (modules settings)
 (libraries utils))

(library
 (name utils)
 (modules utils)
 (preprocess
  (pps lwt_ppx tyxml-ppx ppx_deriving_yojson))
 (libraries dream batteries malloc timedesc))

(rule
 (targets index.html)
 (action
  (copy ../frontend/build/index.html index.html)))

(rule
 (targets react.ml)
 (deps index.html)
 (action
  (run ./tyxml_of_react.sh react.ml --workspace %{workspace_root})))
