(executable
 (name e_uscito_joypad)
 (public_name e_uscito_joypad)
 (modules e_uscito_joypad views joypad_monitor middlewares assets sitemap)
 (preprocess
  (pps lwt_ppx tyxml-ppx ppx_deriving_yojson ppx_rapper))
 (libraries
  dream
  db
  rest
  settings
  batteries
  malloc
  timedesc
  cohttp-lwt-unix
  lambdasoup
  re2
  tyxml
  ppx_deriving_yojson.runtime
  caqti-driver-postgresql
  caqti-lwt))

(library
 (name settings)
 (modules settings)
 (libraries utils))

(library
 (name utils)
 (modules utils)
 (preprocess
  (pps lwt_ppx tyxml-ppx ppx_deriving_yojson))
 (libraries dream batteries malloc timedesc))

(rule
 (target assets.ml)
 (deps
  (glob_files_rec %{project_root}/frontend/build/*)
  (glob_files_rec %{project_root}/frontend/public/*)
  (file %{project_root}/euscitojoypad_db/prerendered_index.html))
 (action
  (progn
   (bash "rm -Rf %{project_root}/assets && mkdir %{project_root}/assets")
   (bash "cp -a %{project_root}/frontend/public/* %{project_root}/assets/")
   (bash "mkdir %{project_root}/assets/js %{project_root}/assets/css")
   (bash "cp -a %{project_root}/frontend/build/static/js/* %{project_root}/assets/js/")
   (bash "cp -a %{project_root}/frontend/build/static/css/* %{project_root}/assets/css/")
   (bash "cp -fa %{project_root}/frontend/build/index.html %{project_root}/assets/index.html")
   (bash "cp %{project_root}/euscitojoypad_db/prerendered_index.html %{project_root}/assets/")
   (with-stdout-to %{target} (run ocaml-crunch -m plain %{project_root}/assets))
  )
 )
)
